--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,13 +21,13 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - images/avatar.png
+    - images/
 
   fonts:
     - family: Pacifico
       fonts:
-      - asset: fonts/Pacifico-Regular.ttf
+        - asset: fonts/Pacifico-Regular.ttf
 
     - family: Source Sans Pro
       fonts:
-      - asset: fonts/SourceSansPro-Regular.ttf
+        - asset: fonts/SourceSansPro-Regular.ttf
